# watson

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  behat.dist.yaml  composer.json  phpunit.xml.dist
.github/workflows/: ci.yml
features/: blastradius.feature  easy-plu-smoke.feature  list-entrypoints.feature
features/bootstrap/: WatsonContext.php
fixtures/laravel-app/: .env  composer.json
fixtures/symfony-app/: .env  composer.json
legacy-rust/: Cargo.toml
legacy-rust/src/: framework.rs  lib.rs  util.rs
legacy-rust/tests/: list_entrypoints.rs  output_formats.rs  php_smoke.rs
src/: cli.rs  framework.rs  lib.rs  main.rs
src/Cli/: Application.php  ChainedEntrypointResolver.php  ConsoleAppEntrypointResolver.php  EntrypointMerging.php  EntrypointResolver.php  Framework.php  LaravelEntrypointResolver.php  Project.php  ProjectDetector.php  ResolverOptions.php  SymfonyEntrypointResolver.php
src/analysis/: blastradius.rs  list_entrypoints.rs  mod.rs
src/diff/: hunks.rs  mod.rs
src/engine/: mod.rs
src/git/: diff.rs  mod.rs  spec.rs
src/graph/: mod.rs  reach.rs
src/output/: envelope.rs  markdown.rs  mod.rs  text.rs
templates/: _sources.md.twig  blastradius.md.twig  blastradius.text.twig  blastradius.tok.twig  envelope.md.twig  envelope.text.twig  envelope.tok.twig  list-entrypoints.md.twig  list-entrypoints.text.twig  list-entrypoints.tok.twig
tests/: blastradius.rs  contract.rs  laravel.rs  list_entrypoints.rs  output_formats.rs  php_calls.rs  php_unit.rs  real_apps.rs
tests/Cli/: ChainedEntrypointResolverTest.php
(+317 files in other folders)
