[package]
name = "watson"
version = "0.1.0"
edition = "2024"
description = "PR blast-radius analyzer for PHP/Symfony — finds entry points reachable from changed code"
license = "MIT OR Apache-2.0"

[dependencies]
mago-syntax = "=1.25.1"
mago-names = "=1.25.1"
mago-codex = "=1.25.1"
mago-analyzer = "=1.25.1"
mago-database = "=1.25.1"
mago-span = "=1.25.1"
mago-atom = "=1.25.1"
mago-php-version = "=1.25.1"
mago-collector = "=1.25.1"
bumpalo = "3"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
foldhash = "0.2"
rayon = "1"

[dev-dependencies]
tempfile = "3"
insta = { version = "1", features = ["json"] }

[lib]
name = "watson"
path = "src/lib.rs"

[[bin]]
name = "watson"
path = "src/main.rs"
